work teaser fixes (title alignment & overall width on different screen widths)

--- a/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_work.scss
+++ b/portfolio2020/web/themes/WVBaseTheme/src/scss/custom/partials/_work.scss
@@ -59,14 +59,40 @@
     z-index: 1;
     margin: 0;
     line-height: 1.1;
-    font-size: 2rem;
+    font-size: 1.4rem;
     text-shadow: 4px 4px 0 $black;
+
+    @media (min-width: 360px) {
+      font-size: 2rem;
+    }
+
+    @media (min-width: 768px) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    @media (min-width: 1200px) {
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
+    }
+
+    &-wrapper {
+
+      @media (min-width: 768px) {
+        padding-left: 0;
+        padding-right: 0;
+      }
+    }
 
     &-container {
       margin-bottom: 2rem;
       position: relative;
-      top: -1.2rem;
+      top: -0.7rem;
       margin-bottom: -1.5rem;
+
+      @media (min-width: 360px) {
+        top: -1.2rem;
+      }
     }
   }
 
